🤖 Chat inteligente com fallback + config localhost
- Respostas contextuais sobre kitesurf (spots, equipamentos, etc)
- Funciona offline sem API externa
- Configurado para localhost via adb reverse

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -23,7 +23,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
         debug {
-            buildConfigField "String", "API_BASE_URL", '"http://10.0.2.2:3000"'
+            buildConfigField "String", "API_BASE_URL", '"http://localhost:3000"'
         }
     }
 
