--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -11,34 +11,24 @@ android {
         applicationId "com.kitesurf.brasil"
         minSdk 24
         targetSdk 34
-        versionCode 1
-        versionName "1.0.0"
-
-        buildConfigField "String", "API_BASE_URL", '"https://kitesurf-api.onrender.com"'
+        versionCode 2
+        versionName "2.0"
     }
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
-        debug {
-            buildConfigField "String", "API_BASE_URL", '"http://localhost:3000"'
-        }
     }
-
+    
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_17
         targetCompatibility JavaVersion.VERSION_17
     }
-
+    
     kotlinOptions {
         jvmTarget = '17'
-    }
-
-    buildFeatures {
-        viewBinding true
-        buildConfig true
     }
 }
 
@@ -47,12 +37,10 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.11.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.3.2'
     
-    // Navigation
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.7.6'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.7.6'
-    
-    // Network
+    // Networking
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.12.0'
@@ -60,16 +48,6 @@ dependencies {
     // Coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3'
     
-    // Lifecycle
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.7.0'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.7.0'
-    
-    // RecyclerView
-    implementation 'androidx.recyclerview:recyclerview:1.3.2'
-    
     // Image loading
-    implementation 'io.coil-kt:coil:2.5.0'
-    
-    // SwipeRefresh
-    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
+    implementation 'com.github.bumptech.glide:glide:4.16.0'
 }
