--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -5,19 +5,30 @@ plugins {
 
 android {
     namespace 'com.kitesurf.brasil'
-    compileSdk 34
+    compileSdk 35
 
     defaultConfig {
         applicationId "com.kitesurf.brasil"
         minSdk 24
-        targetSdk 34
-        versionCode 2
-        versionName "2.0"
+        targetSdk 35
+        versionCode 3
+        versionName "2.1"
     }
 
+    signingConfigs {
+        release {
+            storeFile file('kitesurf-release.keystore')
+            storePassword 'kitesurf2026'
+            keyAlias 'kitesurf'
+            keyPassword 'kitesurf2026'
+        }
+    }
+    
     buildTypes {
         release {
             minifyEnabled true
+            shrinkResources true
+            signingConfig signingConfigs.release
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
