--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -4,23 +4,23 @@ plugins {
 }
 
 android {
-    namespace 'com.kitesurf.brasil'
+    namespace 'com.kiteme.app'
     compileSdk 35
 
     defaultConfig {
-        applicationId "com.kitesurf.brasil"
+        applicationId "com.kiteme.app"
         minSdk 24
         targetSdk 35
-        versionCode 3
-        versionName "2.1"
+        versionCode 4
+        versionName "3.0"
     }
 
     signingConfigs {
         release {
-            storeFile file('kitesurf-release.keystore')
-            storePassword 'kitesurf2026'
-            keyAlias 'kitesurf'
-            keyPassword 'kitesurf2026'
+            storeFile file('kiteme-release.keystore')
+            storePassword 'kiteme2026'
+            keyAlias 'kiteme'
+            keyPassword 'kiteme2026'
         }
     }
     
@@ -50,6 +50,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.3.2'
+    implementation 'androidx.preference:preference-ktx:1.2.1'
     
     // Networking
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
