--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -14,14 +14,21 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.KiteSurf"
+        android:theme="@style/Theme.KiteMe"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
 
+        <!-- Language Selection Activity - First Launch -->
+        <activity
+            android:name=".LanguageSelectActivity"
+            android:exported="false"
+            android:theme="@style/Theme.KiteMe" />
+
+        <!-- Main Activity -->
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.KiteSurf">
+            android:theme="@style/Theme.KiteMe">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
