feat: add splash screen with vertical logo and logo assets
- Add splash screen with KiteMe vertical logo
- Add Theme.KiteMe.Splash for splash screen styling
- Save horizontal and vertical logos in assets for future use
- MainActivity now switches from splash theme on startup

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -24,11 +24,11 @@
             android:exported="false"
             android:theme="@style/Theme.KiteMe" />
 
-        <!-- Main Activity -->
+        <!-- Main Activity with Splash Screen -->
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.KiteMe">
+            android:theme="@style/Theme.KiteMe.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
